= keybox Changelog
=== Version 1.2.0

* [Bug 8330] - Fixed - home directory detection 

=== Version 1.1.0

* keybox now uses HighLine for terminal input/output
* Added --color SCHEME option to support custom colorized output
  and non-colorzed output
  - ships with light_bg and dark_bg schemes, dark_bg is default
* Fixed configuration bug where command line options were not 
  correctly overwriting default options.

=== Version 1.0.0

* Initial public release
* +keybox+ - Full basic functionality 
  - database creation
  - basic CRUD operations
  - searching 
  - import and export of CSV's 
  - colorized output
* +kpg+ - Full basic functionality 
  - pick between random and pronounceable passwords
  - set minimum and maximum password length
  - set symbol sets to use in password generation